<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="@color/background"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
>
<TextView
  android:id="@+id/widget34"
  android:textColor="@color/text_title"
  android:shadowColor="@color/shadow_title"
  android:textStyle="bold"
  android:shadowDx="0.0"
  android:shadowDy="0.5"
  android:shadowRadius="0.5"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="16dip"
  android:text="@string/main_title"
  android:textSize="20dip"
  android:gravity="center_horizontal"
>
</TextView>
<Button
android:id="@+id/continue_button"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/continue_label"
android:textSize="14dip"
>
</Button>
<Button
android:id="@+id/new_game_button"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/new_game_label"
android:textSize="14dip"
>
</Button>
<Button
android:id="@+id/about_button"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/about_label"
android:textSize="14dip"
>
</Button>
<Button
android:id="@+id/exit_button"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/exit_label"
android:textSize="14dip"
>
</Button>
</LinearLayout>
